refactor(workspace): harden rollout policy and review UX